--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="main">
+        <h1>hello guyz.</h1>
+    </div>
 </body>
 </html>
