--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="main">
         <h1>hello guyz.</h1>
         <h2>Something good.</h2>
     </div>
+
+
+
+    <script src="script.js"></script>
 </body>
 </html>
