--- a/index.html
+++ b/index.html
@@ -8,11 +8,26 @@
 </head>
 <body>
     <div class="main">
-        <h1>hello guyz.</h1>
-        <h2>Something good.</h2>
-        <h3>Hello.</h3>
-        <h4>pankaj.</h4>
-        <h4>hii</h4>
+        <div id="header">
+            <div id="logo">
+                <img src="https://a.sfdcstatic.com/shared/images/c360-nav/salesforce-with-type-logo.svg" alt="">
+            </div>
+            <div class="texts">Products</div>
+            <div class="texts">Industries</div>
+            <div class="texts">Customers</div>
+            <div class="texts">Learning</div>
+            <div class="texts">Support</div>
+            <div class="texts">Company</div>
+            <div class="texts">Salesforce+</div>
+            <div id="contact">
+                <p><u>Contact Us</u></p>
+                <p>0000-0000-0000</p>
+            </div>
+        </div>
+        <div id="fakeheader"></div>
+        <div id="page1"></div>
+        <div id="page2"></div>
+        <div id="page3"></div>
     </div>
 
 
