--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mental health</title>
+    <title>The Wellness Oasis</title>
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,9 +24,13 @@
             <div class="texts">Company</div>
             <div class="texts">Salesforce+</div>
             <div id="contact">
-                <p><u>Contact Us</u></p>
+                <p style="text-align: center;"><u>Contact Us</u></p>
                 <p>0000-0000-0000</p>
             </div>
+            <div class="icon"><i class="ri-search-line"></i></div>
+            <div class="icon"><i class="ri-global-line"></i></div>
+            <div id="login"><i class="ri-user-3-fill"></i></div>
+            <div id="try"></div>
         </div>
         <div id="fakeheader"></div>
         <div id="page1"></div>
