--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="main">
         <div id="header">
             <div id="logo">
-                <img src="https://a.sfdcstatic.com/shared/images/c360-nav/salesforce-with-type-logo.svg" alt="">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcReBXzAszPjMFINX4IF3NVhyey-V4oHvFd_5w&s" alt="">
             </div>
             <div class="texts">Products</div>
             <div class="texts">Industries</div>
