--- a/index.html
+++ b/index.html
@@ -22,15 +22,20 @@
             <div class="texts">Learning</div>
             <div class="texts">Support</div>
             <div class="texts">Company</div>
-            <div class="texts">Salesforce+</div>
+            <div class="texts">Help</div>
             <div id="contact">
                 <p style="text-align: center;"><u>Contact Us</u></p>
-                <p>0000-0000-0000</p>
+                <p>1456-5633-9908</p>
             </div>
             <div class="icon"><i class="ri-search-line"></i></div>
             <div class="icon"><i class="ri-global-line"></i></div>
-            <div id="login"><i class="ri-user-3-fill"></i></div>
-            <div id="try"></div>
+            <div id="login">
+                <i class="ri-user-3-fill"></i>
+                <p>Login</p>
+            </div>
+            <div id="try">
+                <p> AI Chatbot</p>
+            </div>
         </div>
         <div id="fakeheader"></div>
         <div id="page1"></div>
