--- a/index.html
+++ b/index.html
@@ -38,7 +38,18 @@
             </div>
         </div>
         <div id="fakeheader"></div>
-        <div id="page1"></div>
+        <div id="page1">
+            <div id="strip">
+                <p>“Your mental health matters more than any external validation.”</p>
+            </div>
+            <div id="content">
+                <div id="box1"></div>
+                <div id="box2"></div>
+            </div>
+            <div id="heading">
+                <p>Learn what Wellness Oasis products can do for you.</p>
+            </div>
+        </div>
         <div id="page2"></div>
         <div id="page3"></div>
     </div>
