--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
             </div>
             <div id="content">
                 <div id="box1"></div>
-                <div id="box2"></div>
+                <div id="box2">
+                    <video width="90%" height="85%" controls autoplay>
+                         <source src="vedio.mp4.mp4" type="video/mp4">
+                </div>
             </div>
             <div id="heading">
                 <p>Learn what Wellness Oasis products can do for you.</p>
