--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div id="content">
                 <div id="box1"></div>
                 <div id="box2">
-                    <video width="90%" height="85%" controls autoplay>
+                    <video width="90%" height="85%">
                          <source src="vedio.mp4.mp4" type="video/mp4">
                 </div>
             </div>
