--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <p>1456-5633-9908</p>
             </div>
             <div class="icon"><i class="ri-search-line"></i></div>
-            <div class="icon"><i class="ri-global-line"></i></div>
+            <div id="dark"><i class="ri-sun-fill"></i></div>
             <div id="login">
                 <i class="ri-user-3-fill"></i>
                 <p>Login</p>
@@ -45,8 +45,7 @@
             <div id="content">
                 <div id="box1"></div>
                 <div id="box2">
-                    <video width="90%" height="85%">
-                         <source src="vedio.mp4.mp4" type="video/mp4">
+                    <video src="vedio.mp4.mp4" controls></video>
                 </div>
             </div>
             <div id="heading">
@@ -56,8 +55,6 @@
         <div id="page2"></div>
         <div id="page3"></div>
     </div>
-
-
     <script src="script.js"></script>
 </body>
 </html>
