--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 
 
 
-    <script src="script.js"></script>
+    <script >
+        const body= document querySelector("body");
+        body.innerHTML = "<h1>Hacked!!</h1>";
+    </script>
+    
 </body>
 </html>
