--- a/index.html
+++ b/index.html
@@ -17,7 +17,66 @@
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcReBXzAszPjMFINX4IF3NVhyey-V4oHvFd_5w&s" alt="">
             </div>
             <div class="texts">Products</div>
-            <div class="texts">Industries</div>
+            <div class="texts">Industries</div><!DOCTYPE html>
+            <html lang="en">
+            <head>
+                <meta charset="UTF-8">
+                <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                <title>The Wellness Oasis</title>
+                <link
+                href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+                rel="stylesheet"
+            /> 
+                <link rel="stylesheet" href="style.css">
+            </head>
+            <body>
+                <div class="main">
+                    <div id="header">
+                        <div id="logo">
+                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcReBXzAszPjMFINX4IF3NVhyey-V4oHvFd_5w&s" alt="">
+                        </div>
+                        <div class="texts">Products</div>
+                        <div class="texts">Industries</div>
+                        <div class="texts">Customers</div>
+                        <div class="texts">Learning</div>
+                        <div class="texts">Support</div>
+                        <div class="texts">Company</div>
+                        <div class="texts">Help</div>
+                        <div id="contact">
+                            <p style="text-align: center;"><u>Contact Us</u></p>
+                            <p>1456-5633-9908</p>
+                        </div>
+                        <div class="icon"><i class="ri-search-line"></i></div>
+                        <div id="dark"><i class="ri-sun-fill"></i></div>
+                        <div id="login">
+                            <i class="ri-user-3-fill"></i>
+                            <p>Login</p>
+                        </div>
+                        <div id="try">
+                            <p> AI Chatbot</p>
+                        </div>
+                    </div>
+                    <div id="fakeheader"></div>
+                    <div id="page1">
+                        <div id="strip">
+                            <p>“Your mental health matters more than any external validation.”</p>
+                        </div>
+                        <div id="content">
+                            <div id="box1"></div>
+                            <div id="box2">
+                                <video src="vedio.mp4.mp4" controls></video>
+                            </div>
+                        </div>
+                        <div id="heading">
+                            <p>Learn what Wellness Oasis products can do for you.</p>
+                        </div>
+                    </div>
+                    <div id="page2"></div>
+                    <div id="page3"></div>
+                </div>
+                <script src="script.js"></script>
+            </body>
+            </html>
             <div class="texts">Customers</div>
             <div class="texts">Learning</div>
             <div class="texts">Support</div>
