--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             </div>
         </div>
         <div id="page2"></div>
+        <div id="page3"></div>
     </div>
     <script src="script.js"></script>
 </body>
