--- a/index.html
+++ b/index.html
@@ -53,6 +53,40 @@
             </div>
         </div>
         <div id="page2"></div>
+        <footer id="footer">
+            <div class="footer-container">
+                <div class="footer-section">
+                    <h3>About Us</h3>
+                    <p>Your partner in mental wellness, providing innovative solutions to help you thrive in life.</p>
+                </div>
+                <div class="footer-section">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="#">Products</a></li>
+                        <li><a href="#">Industries</a></li>
+                        <li><a href="#">Customers</a></li>
+                        <li><a href="#">Support</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Contact</h3>
+                    <p><i class="ri-phone-line"></i> 1456-5633-9908</p>
+                    <p><i class="ri-mail-line"></i> support@wellnessoasis.com</p>
+                </div>
+                <div class="footer-section">
+                    <h3>Follow Us</h3>
+                    <div class="social-icons">
+                        <a href="#"><i class="ri-facebook-circle-fill"></i></a>
+                        <a href="#"><i class="ri-twitter-fill"></i></a>
+                        <a href="#"><i class="ri-instagram-fill"></i></a>
+                        <a href="#"><i class="ri-linkedin-fill"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 The Wellness Oasis. All rights reserved.</p>
+            </div>
+        </footer>
     </div>
     <script src="script.js"></script>
 </body>
