--- a/index.html
+++ b/index.html
@@ -14,19 +14,16 @@
     <div class="main">
         <div id="header">
             <div id="logo">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcReBXzAszPjMFINX4IF3NVhyey-V4oHvFd_5w&s" alt="">
+                <img src="https://files.oaiusercontent.com/file-G2mnBTCLs1UhxxmFr8KN0vzG?se=2024-11-21T17%3A43%3A02Z&sp=r&sv=2024-08-04&sr=b&rscc=max-age%3D604800%2C%20immutable%2C%20private&rscd=attachment%3B%20filename%3D0da8f039-7870-4ca6-933b-144ed55bdc3e.webp&sig=856kCpfObVjAXupDDdSigXn6C0mLMFFmXHQNOdzHkso%3D" alt="">
             </div>
             <div class="texts">Products</div>
-            <div class="texts">Industries</div>
+            <div class="texts">Community</div>
             <div class="texts">Customers</div>
             <div class="texts">Learning</div>
             <div class="texts">Support</div>
-            <div class="texts">Company</div>
             <div class="texts">Help</div>
-            <div id="contact">
-                <p style="text-align: center;"><u>Contact Us</u></p>
-                <p>1456-5633-9908</p>
-            </div>
+            <div class="texts"></div>
+            <div id="contact"></div>
             <div class="icon"><i class="ri-search-line"></i></div>
             <div id="dark"><i class="ri-sun-fill"></i></div>
             <div id="login">
@@ -34,7 +31,7 @@
                 <p>Login</p>
             </div>
             <div id="try">
-                <p> AI Chatbot</p>
+                <p>Quiz</p>
             </div>
         </div>
         <div id="fakeheader"></div>
@@ -43,16 +40,25 @@
                 <p>“Your mental health matters more than any external validation.”</p>
             </div>
             <div id="content">
-                <div id="box1"></div>
+                <div id="box1">
+                    <video src="vedioo.mp4" controls autoplay muted playsinline></video>
+                </div>
                 <div id="box2">
-                    <video src="vedio.mp4.mp4" controls></video>
+
                 </div>
             </div>
             <div id="heading">
                 <p>Learn what Wellness Oasis products can do for you.</p>
             </div>
         </div>
-        <div id="page2"></div>
+        <div id="page2">
+            <div id="page2">
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+            </div>
+        </div>
         <footer id="footer">
             <div class="footer-container">
                 <div class="footer-section">
