--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <p>Login</p>
             </div>
             <div id="try">
-                <p>Quiz</p>
+                <p>AI Chatbot</p>
             </div>
         </div>
         <div id="fakeheader"></div>
