--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <p>Login</p>
             </div>
             <div id="try">
-                <p>AI Chatbot</p>
+                <p onclick="openChatbot()">AI Chatbot</p>
             </div>
         </div>
         <div id="fakeheader"></div>
@@ -92,6 +92,15 @@
                 <p>&copy; 2024 The Wellness Oasis. All rights reserved.</p>
             </div>
         </footer>
+    </div>
+
+     <!-- Dialogflow Chatbot -->
+     <div id="chatbot-container" style="display:none; position:fixed; bottom:0; right:0; width:500px; height:500px; z-index:1000;">
+        <iframe
+            src="https://console.dialogflow.com/api-client/demo/embedded/908d1c59-f2a3-43b3-b163-6025e72a7816"
+            style="width:100%; height:100%; border:none;"
+            allow="microphone"
+        ></iframe>
     </div>
     <script src="script.js"></script>
 </body>
