--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="texts">Help</div>
             <div class="texts"></div>
             <div id="contact"></div>
-            <div class="icon"><i class="ri-search-line"></i></div>
+            <div class="icon"></div>
             <div id="dark"><i class="ri-sun-fill"></i></div>
             <div id="login">
                 <i class="ri-user-3-fill"></i>
