--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="texts">Customers</div>
             <div class="texts">Learning</div>
             <div class="texts">Support</div>
-            <div class="texts">Help</div>
+            <div class="texts">Quiz</div>
             <div class="texts"></div>
             <div id="contact"></div>
             <div class="icon"></div>
@@ -53,10 +53,22 @@
         </div>
         <div id="page2">
             <div id="page2">
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
+                <div class="box">
+                    <h3>Mental Health Assessment Quiz</h3>
+                    <h4>To help users better understand their mental health by offering a personalized assessment. The quiz provides users with insights into their emotional well-being, allowing them to recognize potential mental health concerns such as anxiety or depression. It also serves as a tool to track progress over time and receive targeted resources for self-care or professional help.</h4>
+                </div>
+                <div class="box">
+                    <h3>Chatbot for Mental Health Support</h3>
+                    <h4>To provide immediate, conversational support for users in a safe and confidential environment. The chatbot offers personalized coping strategies, emotional support, and mental health resources in real-time. It empowers users by allowing them to engage with a non-judgmental, accessible tool at any time, providing assistance when human help may not be immediately available.</h4>
+                </div>
+                <div class="box">
+                    <h3>Mindfulness & Meditation Tools</h3>
+                    <h4>To help users manage stress, anxiety, and negative emotions through proven relaxation techniques. This feature encourages users to practice mindfulness, meditation, and other mental wellness exercises, which can significantly improve their mental health by promoting emotional regulation, reducing stress, and fostering a sense of calm and well-being.</h4>
+                </div>
+                <div class="box">
+                    <h3>Emergency Support Feature System</h3>
+                    <h4>To provide users with immediate access to critical mental health resources during times of crisis. This feature ensures that users in distress can quickly find helplines, crisis centers, and professional assistance when they need it most. It aims to offer a safety net and guidance to individuals who may be experiencing urgent mental health challenges, ensuring they receive the support they require.</h4>
+                </div>
             </div>
         </div>
         <footer id="footer">
