--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="texts">Customers</div>
             <div class="texts">Learning</div>
             <div class="texts">Support</div>
-            <div class="texts">Quiz</div>
+            <div class="texts"><a href="quiz.html">Quiz</a></div>
             <div class="texts"></div>
             <div id="contact"></div>
             <div class="icon"></div>
